@@ -18,6 +18,7 @@ def STORE_ATTR(op):            return dis.opname[op] == 'STORE_ATTR'
 def STORE_FAST(op):            return dis.opname[op] == 'STORE_FAST'
 def STORE_GLOBAL(op):          return dis.opname[op] == 'STORE_GLOBAL'
 def CALL_FUNCTION(op):         return dis.opname[op] == 'CALL_FUNCTION'
+def IMPORT_NAME(op):           return dis.opname[op] == 'IMPORT_NAME'
 def BINARY_SUBSCR(op):         return dis.opname[op] == 'BINARY_SUBSCR'
 def BINARY_ADD(op):            return dis.opname[op] == 'BINARY_ADD'
 def BUILD_LIST(op):            return dis.opname[op] == 'BUILD_LIST'
